<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_color"
    tools:context="com.codestown.examinoo.activity.ResultActivity">


    <include layout="@layout/toolbar_layout" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@+id/toolBar"
        android:background="@drawable/drop_shadow" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider1"
        android:layout_marginTop="6dp"
        android:overScrollMode="never">

        <LinearLayout
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_horizontal"
            android:layoutDirection="ltr"
            android:orientation="vertical">

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_shadow">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="@string/congratulations"
                        android:textColor="@color/txt_color"
                        android:textSize="@dimen/mid_text"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/tvResultMsg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/time_challenge_msg"
                        android:textColor="@color/txt_color"
                        android:textSize="@dimen/mid_text"
                   />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10dp">


                        <com.codestown.examinoo.helper.CircleTimer
                            android:id="@+id/progressBar"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            app:direction="clockwise"
                          />

                        <TextView
                            android:id="@+id/tvTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:textColor="@color/txt_color"
                            android:textSize="@dimen/mid_text" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/tvChallengeTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10dp"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/mid_text"
                        android:fontFamily="@font/open_sans_semibold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_marginTop="@dimen/margin_20dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/correct"
                                android:fontFamily="@font/open_sans_semibold"
                                android:textColor="@color/colorPrimaryDark" />

                            <TextView
                                android:id="@+id/right"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:drawablePadding="5dp"

                                android:layout_gravity="center_horizontal"
                                android:padding="5dp"
                                android:text="@string/zero"
                                android:textColor="@color/txt_color" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/incorrect"
                                android:fontFamily="@font/open_sans_semibold"
                                android:textColor="@color/colorPrimaryDark" />

                            <TextView
                                android:id="@+id/wrong"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:drawablePadding="5dp"
                                android:padding="5dp"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/zero"
                                android:textColor="@color/txt_color" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

            <FrameLayout
                android:id="@+id/adFrameLyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_bg"
                android:gravity="center"
                android:onClick="ReviewAnswers"
                android:paddingTop="@dimen/margin_dp"
                android:paddingBottom="@dimen/margin_dp"
                android:text="@string/review_answer"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/txt_color"
                android:textStyle="bold" />


            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_bg"
                android:gravity="center"
                android:onClick="ShareScore"
                android:paddingTop="@dimen/margin_dp"
                android:paddingBottom="@dimen/margin_dp"
                android:text="@string/share_result"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/txt_color"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_bg"
                android:gravity="center"
                android:onClick="PlayQuiz"
                android:paddingTop="@dimen/margin_dp"
                android:paddingBottom="@dimen/margin_dp"
                android:text="@string/play_quiz"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/txt_color"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_bg"
                android:gravity="center"
                android:onClick="BattleQuiz"
                android:paddingTop="@dimen/margin_dp"
                android:paddingBottom="@dimen/margin_dp"
                android:text="@string/battle_quiz"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/txt_color"
                android:textStyle="bold"
                tools:ignore="OnClick" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/answer_bg"
                android:gravity="center"
                android:onClick="Home"
                android:paddingTop="@dimen/margin_dp"
                android:paddingBottom="@dimen/margin_dp"
                android:text="@string/quite"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/txt_color"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
